# seqforge

./: .gitignore  Cargo.toml  EDITOR_PLAN.md  LICENSE  NOTICE  PLAN.md  README.md  REFACTOR_PLAN.md  RESTRICTION_PLAN.md  ROADMAP.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/seqforge-app/: Cargo.toml
crates/seqforge-app/src/: app.rs  bar.rs  browser.rs  cache.rs  cli_install.rs  clipboard.rs  command.rs  event.rs  focus.rs  inspector.rs  keymap.rs  main.rs  minimap.rs  overlay.rs  persistence.rs  socket.rs  tabs.rs  terminal.rs  ui_icon.rs  viewer.rs  workspace.rs
crates/seqforge-app/src/assembly/: mod.rs  resolver.rs  workbench.rs
crates/seqforge-app/src/command/: assembly.rs  edit.rs  file.rs  layout.rs  mod.rs  nav.rs
crates/seqforge-app/src/config/: keybindings.rs  mod.rs  paths.rs  schema.rs  theme.rs
crates/seqforge-app/src/config/defaults/: default-dark.toml  default-light.toml  keybindings.toml  settings.toml
crates/seqforge-app/src/fragments/: mod.rs
crates/seqforge-app/src/inspector/: cutsite.rs  feature.rs  mod.rs  primer.rs  row.rs
crates/seqforge-app/src/viewer/: mod.rs  primer_anneal.rs  track.rs  translation.rs
crates/seqforge-app/src/viewer/tracks/: cut_sites.rs  features.rs  mod.rs  primers.rs  ruler.rs  sequence.rs  translation.rs
crates/seqforge-bio/: Cargo.toml
crates/seqforge-bio/src/: digest.rs  dna.rs  enzyme_query.rs  fasta.rs  genbank.rs  lib.rs  primer.rs  search.rs  translate.rs
crates/seqforge-bio/src/assembly/: discover.rs  expand.rs  mod.rs  naming.rs  select.rs
crates/seqforge-bio/src/assembly/join/: ends.rs  golden_gate.rs  ligate.rs  mod.rs
crates/seqforge-bio/src/assembly/prepare/: as_is.rs  digest.rs  mod.rs  pcr.rs
crates/seqforge-bio/src/primer/: anneal.rs  design.rs  evaluate.rs  mod.rs  pcr.rs
crates/seqforge-bio/tests/: assembly_run.rs  digest_puc19.rs  load_tests.rs  puc19_smoke.rs  roundtrip.rs
crates/seqforge-bio/tests/fixtures/: circular_plasmid.gb  multi_feature.gb  pUC19.gbk  small_linear.fasta
crates/seqforge-cli/: Cargo.toml
crates/seqforge-cli/src/: lib.rs  main.rs
crates/seqforge-core/: Cargo.toml
crates/seqforge-core/src/: commands.rs  document.rs  fragment.rs  lib.rs  (+7 more)
crates/seqforge-fidelity/: ATTRIBUTION.md  Cargo.toml  README.md
crates/seqforge-restriction/: Cargo.toml  README.md
crates/seqforge-thermo/: Cargo.toml  README.md
docs/: architecture.md  extensibility.md  focus-refactor.md  socket-protocol.md
plans/: assembly.md  buffer-lifecycle.md  editor.md  feature-model.md  fidelity.md  methylation.md  primers.md  refactor.md  render-tracks.md  restriction.md  span.md  viewer.md  workbench.md
(+30 files in other folders)
