[workspace]
members = [
    "crates/seqforge-app",
    "crates/seqforge-core",
    "crates/seqforge-bio",
    "crates/seqforge-cli",
    "crates/seqforge-restriction",
    "crates/seqforge-thermo",
]
resolver = "2"

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Bio crates
gb-io = "0.9"
bio = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# GUI
eframe = { version = "0.31", features = ["persistence"] }
egui = "0.31"
egui_dock = { version = "0.16", features = ["serde"] }
egui_extras = "0.31"

[profile.release]
lto = true
codegen-units = 1
