[package]
name = "seqforge-app"
version = "0.1.0"
edition = "2024"

[dependencies]
seqforge-core = { path = "../seqforge-core" }
seqforge-bio = { path = "../seqforge-bio" }
eframe = { workspace = true }
egui = { workspace = true }
egui_dock = { workspace = true }
egui_extras = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = "2"
egui-file-dialog = "0.9"
egui-phosphor = "0.9" # icon font (X / trash / … ); egui 0.31-compatible
egui_term = "0.1.0"
clap.workspace = true
egui-notify = "0.19"
toml = "0.8"
indexmap = { version = "2", features = ["serde"] }
directories = "5"
# Direct OS clipboard (text mirror). Do not rely on egui-winit's transitive copy.
arboard = { version = "3", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSPasteboard"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_DataExchange"] }
