[package]
name = "seqforge-bio"
version = "0.1.0"
edition = "2024"

[dependencies]
seqforge-core = { path = "../seqforge-core" }
seqforge-restriction = { path = "../seqforge-restriction" }
thiserror = { workspace = true }
gb-io = { workspace = true }
bio = { workspace = true }
serde_json = { workspace = true }
